--- a/package.json
+++ b/package.json
@@ -56,6 +56,6 @@
   "devDependencies": {
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.6",
     "enzyme": "^3.11.0",
-    "gh-pages": "^3.2.3"
+    "svgo": "^2.0.0"
   }
 }
