--- a/package.json
+++ b/package.json
@@ -57,6 +57,8 @@
   "devDependencies": {
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.6",
     "enzyme": "^3.11.0",
+    "jest-cucumber": "^3.0.1",
+    "puppeteer": "^13.1.2",
     "svgo": "^2.0.0"
   }
 }
