--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Meet App",
-  "name": "Upcoming events world-wide for fullstack developers",
+  "name": "Meet App",
   "icons": [
     {
       "src": "favicon.png",
